Added S3 Presigned URL Caching, Composite indexing, Join Fetch, Pagination