@@ -1,6 +1,6 @@
-// tells which urls can access HTTP methods, and sets rules for each url
 package PersonalCPI.PersonalCPI.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationProvider;
@@ -13,6 +13,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -20,6 +21,9 @@ import java.util.List;
 public class SecurityConfiguration {
     private final AuthenticationProvider authenticationProvider;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    
+    @Value("${cors.allowed-origins:http://localhost:3000,http://localhost:8080}")
+    private String allowedOrigins;
 
    public SecurityConfiguration(
            JwtAuthenticationFilter jwtAuthenticationFilter,
@@ -29,36 +33,34 @@ public class SecurityConfiguration {
        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
    }
 
-    @Bean // configure security chain and rules
+    @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http)  throws Exception {
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Add this line
-                .csrf(csrf ->csrf.disable()) // disable csrf protection
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(csrf ->csrf.disable())
                 .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers("/auth/**").permitAll() // authorize anything with auth header else not
-                        .requestMatchers("/api/admin/**").authenticated() // Admin endpoints require authentication
-                        .requestMatchers("/api/receipts/**").authenticated() // permitAll
-                        .requestMatchers("/api/cpi/**").authenticated() // CPI endpoints require authentication
+                        .requestMatchers("/auth/**").permitAll()
+                        .requestMatchers("/api/admin/**").authenticated()
+                        .requestMatchers("/api/receipts/**").authenticated()
+                        .requestMatchers("/api/cpi/**").authenticated()
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(session ->
-                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // every session needs jwt
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authenticationProvider(authenticationProvider)
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
 
-    @Bean // configure cors settings, of what each our specified url can access
+    @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // set urls that can be accessed
-        configuration.setAllowedOrigins(List.of("https://backend.com",
-                "http://localhost:8080",
-                "http://localhost:3000",
-                "https://yourdomain.com")); // FIX: Place actual domain here
+        // Split comma-separated origins from environment variable or .env file
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        configuration.setAllowedOrigins(origins);
 
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
         configuration.setAllowCredentials(true);
 
